fix(ld-button): progress bar overflow issue on safari
Resolves #32

--- a/src/liquid/components/ld-button/ld-button.css
+++ b/src/liquid/components/ld-button/ld-button.css
@@ -155,6 +155,7 @@ ld-button {
   overflow: hidden;
   border-bottom-left-radius: var(--ld-br-full);
   border-bottom-right-radius: var(--ld-br-full);
+  transform: translateZ(0); /* fixes overflow issue in Safari */
 
   &::before,
   &::after {
